2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-05  Andras Varga

	* modinsp2.tcl: fixed bug: 

2003-01-29  Andras Varga

	* added "Finish" to main toolbar

	* known bug: if one sets up the Token Ring sample with 120 nodes
	(other numbers work as well), displayed ring will be broken at places.

2003-01-23  Andras Varga

	* "Step" button in module inspectors replaced with 3 buttons ("Run 
	until next local event", "Fast run until next local event", "Stop")

	* Graphical module inspector: if there're too many submodules, drawing
	may take very long, so the user is prompted if he/she really wants
	see the graphics. Limit is currently 1000 submodules. 
	The object tree view is also usable until ~1000 objects displayed in 
	the tree.

	* Note: ad-hoc load tests: with Dyna, a 8000-client network could be set 
	up and run (~12500 modules, including ServerProcs) on Win2K, 256M RAM.
	A modified version of Fifo2 (n independent Fifo networks, each with 
	3 modules using handleMessage()) could be set up with n=33300, that is,
	~100,000 modules. Process size was 280M, so it couldn't be run (too 
	less physical RAM). Both auto-inspectors (.tkenvrc) and displaying the 
	object tree view were very slow over a few thousand modules.

2003-01-19  Andras Varga

	* Cygwin fixes; put checkTckTkVersion and setupTkOptions (was generic_-
	bindings) into widgets.tcl

2003-01-16  Andras Varga

	* enhancement: inspectors: made buttons that open inspectors for other 
	objects (e.g. encapsulated message in message inspector) look like 
	other inspector fields (i.e. label+button).

2003-01-14  Andras Varga

	* enhancement: graphical module inspector: don't bug the user with 
	error dialogs if icon for a module is not found; just only display 
	the 'unknown' icon.

2003-01-12  Andras Varga

	* enhancement: usability fixes on the inspector type selection dialog

2003-01-11  Andras Varga

	* enhancement: main.tcl: appearance of menus on Unix made more 
	contemporary (via option add's)
